--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title></title>
+	<title>Events JS</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -13,18 +13,13 @@
 	<meta name="description" content="">
 </head>
 <body>
-		<h1>Todos</h1>
-		<form action="" method="POST">
-			<input type="text" id="todoInput" placeholder="Enter your todo">
-			<button id="addBtn" disabled>Add</button>
-		</form>
+	<div id="myDiv"> Type your text here...</div>
+	<textarea id="myTextarea" autofocus></textarea>
+	
 
-		<h2>Todos List</h2>
-		<ul id="todos"></ul>
-		
-		<h2>Completed List</h2>
-		<ul id="completed"></ul>
-
+	<div class="hint">(Press Ctrl + E to type in & Ctrl + S to save)</div>
+	<script src="js/jquery.js"></script>
 	<script src="js/scripts.js"></script>
+
 </body>	
 </html>
